Внес некоторые правки

--- a/index.html
+++ b/index.html
@@ -60,11 +60,13 @@
             </nav>
         </div>
         <div class="header__info">
-            <h1 class="header__title">Выпечка и Доставка тортов в ташкенте</h1>
-            <div class="header__content">
-                <p class="header__content-desc">Индивидуальный подход к каждому клиенту</p>
-                <p class="header__content-desc">Большой ассортимент</p>
-                <p class="header__content-desc">Доставка по городу Ташкент</p>
+            <div class="header__info-content container">
+                <h1 class="header__title">Выпечка и Доставка тортов в ташкенте</h1>
+                <div class="header__content">
+                    <p class="header__content-desc">Индивидуальный подход к каждому клиенту</p>
+                    <p class="header__content-desc">Большой ассортимент</p>
+                    <p class="header__content-desc">Доставка по городу Ташкент</p>
+                </div>
             </div>
         </div>
     </header>
@@ -439,7 +441,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="footer__logo">
+                <div class="footer__logo d-flex align-items-center">
                     <a href="#">
                         <img src="img/logo-foot.svg" alt="logo">
                     </a>
